--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "nativescript": {
     "tns-ios": {
-      "version": "2.4.0"
+      "version": "3.0.0"
     }
   },
   "scripts": {
@@ -18,10 +18,8 @@
     "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-ng2-slides && tns plugin add .. && tns install",
     "setup": "npm install && cd demo && npm install && cd .. && npm run build && cd demo && tns plugin add .. && cd .."
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/radiorottu/nativescript-ng2-slides.git"
