--- a/slides/app/package.json
+++ b/slides/app/package.json
@@ -28,23 +28,21 @@
         "v8Flags": "--expose_gc"
     },
     "dependencies": {
-        "nativescript-theme-core": "^0.2.1",
-        "nativescript-angular": "1.2.0",
-        "@angular/core": "2.2.1",
-        "@angular/common": "2.2.1",
-        "@angular/compiler": "2.2.1",
-        "@angular/http": "2.2.1",
-        "@angular/platform-browser": "2.2.1",
-        "@angular/platform-browser-dynamic": "2.2.1",
-        "@angular/forms": "2.2.1",
-        "@angular/router": "3.2.1",
-        "rxjs": "5.0.0-beta.12",
+        "nativescript-theme-core": "^1.0.2",
+        "nativescript-angular": "~3.0.0",
+        "@angular/core": "~4.1.0",
+        "@angular/common": "~4.1.0",
+        "@angular/compiler": "~4.1.0",
+        "@angular/http": "~4.1.0",
+        "@angular/platform-browser": "~4.1.0",
+        "@angular/platform-browser-dynamic": "~4.1.0",
+        "@angular/forms": "~4.1.0",
+        "@angular/router": "~4.1.0",
+        "rxjs": "~5.3.0",
         "reflect-metadata": "~0.1.8"
     },
     "devDependencies": {
-        "zone.js": "~0.6.21",
-        "typescript": "~2.0.10",
-        "nativescript-dev-typescript": "^0.3.2",
-        "nativescript-dev-android-snapshot": "^0.*.*"
+        "typescript": "~2.2.1",
+        "nativescript-dev-typescript": "^0.4.0"
     }
 }
