--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,14 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
+        "sourceMap": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "noEmitHelpers": true,
-        "noEmitOnError": false
+        "noEmitHelpers": false,
+        "noEmitOnError": false,
+        "noEmit": false,
+        "allowUnreachableCode": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules",
